force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <inlineHelpText>Type of contact.</inlineHelpText>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
                <default>true</default>
                <label>Applicant</label>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>