force-app/main/default/objects/Contact/fields/Corporate_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Purchaser</label>
    <description>Tick if this is corporate contact e.g., to show "Pay by Company" during the checkout.</description>
    <inlineHelpText>Tick if this is corporate contact e.g., to show "Pay by Company" during the checkout.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>