force-app/main/default/objects/Contact/fields/Generate_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Generate_Student_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to generate Student ID.</description>
    <inlineHelpText>Indicator to generate Student ID.</inlineHelpText>
    <label>Generate Student ID</label>
    <type>Checkbox</type>
</CustomField>