force-app/main/default/objects/Contact/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>Student identifier for an educational institution</description>
    <inlineHelpText>Student identifier for an educational institution</inlineHelpText>
    <label>Student ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>