force-app/main/default/objects/Contact/listViews/All_Applicants.listView-meta.xml
<ListView>
    <fullName>All_Applicants</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Applicant</value>
    </filters>
    <label>All Applicants</label>
</ListView>